...
            SliverToBoxAdapter(
              child: Row(
                spacing: 8,
                children: [
                  Expanded(
                    child: SearchBar(
                      key: const Key('job_search_bar'),
                      leading: Icon(
                        IconlyLight.search,
                        color: Theme.of(context).colorScheme.primaryContainer,
                      ),
                      padding: const WidgetStatePropertyAll(
                        EdgeInsets.symmetric(
...
                        ),
                      ),
                      elevation: const WidgetStatePropertyAll(1),
                    ),
                  ),
                  _CustomFilter(
                    key: const Key('job_filter_button'),
                    controller: controller,
                    isLoading: isLoading,
                    ref: ref,
                    node: node,
                  ),
                ],
...
  Widget build(final BuildContext context) {
    final jobTypeSelection = useState<Set<int>>(jobTypes);
    final jobPositionSelection = useState<Set<int>>(jobPositions);
    final majorSelection = useState<Set<int>>(jobMajors);
    final citySelection = useState<City?>(jobCity);
    return Container(
      key: const Key('filter_modal_container'),
      margin: const EdgeInsets.symmetric(horizontal: 16, vertical: 8),
      height: MediaQuery.of(context).size.height * 0.75,
      child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
...
  final ValueNotifier<Set<int>> majorSelection;

  /// Notifier holding the selected city from the modal.
  final ValueNotifier<City?> citySelection;
  @override
  Widget build(final BuildContext context) => CustomButton(
    key: const Key('apply_filter_button'),
    onPressed: () async {
      final majorState = ref.read(majorControllerProvider);
      final positionState = ref.read(positionControllerProvider);
      final scheduleState = ref.read(scheduleControllerProvider);
      final List<Major>? major =
          // ignore: lines_longer_than_80_chars
...
