...
            flexibleSpace: FlexibleSpaceBar(
              title: Text(context.t.job.jobDetail),
              centerTitle: true,
            ),
            actions: [
              _BookmarkButton(
                key: const Key('job_detail_bookmark_button'),
                jobId: jobId,
                isSelected: isSelected,
                isBookmarkProcessing: isBookmarkProcessing,
              ),
            ],
          ),
...
      )
      ..add(IntProperty('jobId', jobId));
  }
}

/// The bottom navigation bar for the job detail page, primarily containing
/// the "Apply" button.
class _ApplyNavBar extends StatelessWidget {
  /// Creates an [_ApplyNavBar].
  ///
  /// [jobId] The ID of the job for which the apply action is relevant.
  const _ApplyNavBar({super.key, required this.jobId});

...
          final state = ref.watch(jobDetailControllerProvider);
          return switch (state) {
            JobDetailLoading() => const JobDetailNavBarShimmer(),
            JobDetailError() => const SizedBox.shrink(),
            JobDetailInitial() => const SizedBox.shrink(),
            JobDetailLoaded() => ElevatedButton(
              key: const Key('job_apply_button'),
              onPressed: () async {
                await showModalBottomSheet(
                  context: context,
                  isScrollControlled: true,
                  backgroundColor: Colors.transparent,
                  useSafeArea: true,
...
                  fontWeight: FontWeight.bold,
                  color: Theme.of(context).colorScheme.primary,
                ),
              ),
              const SizedBox(height: 12),
              TextField(
                key: const Key('cover_letter_field'),
                controller: controller,
                minLines: 5,
                maxLines: 5,
                decoration: InputDecoration(
                  fillColor: Colors.white,
                  filled: true,
...
