...
                ClipRRect(
                  borderRadius: BorderRadius.circular(20),
                  child: Image.asset('assets/images/icon.png', width: 100, height: 100),
                ),
                const SizedBox(height: 50),
                FormBuilderTextField(
                  key: const Key('email_field'),
                  name: 'email',
                  focusNode: emailFocusNode,
                  keyboardType: TextInputType.emailAddress,
                  textInputAction: TextInputAction.next,
                  decoration: InputDecoration(
                    border: const OutlineInputBorder(
...
                    }
                    FocusScope.of(context).requestFocus(passwordFocusNode);
                  },
                ),
                const SizedBox(height: 20),
                AuthTextField(
                  key: const Key('password_field'),
                  name: 'password',
                  label: context.t.auth.password,
                  controller: passwordController,
                  focusNode: passwordFocusNode,
                  keyboardType: TextInputType.visiblePassword,
                  validator: (final value) => InputConverter.validatePassword(
...
                const SizedBox(height: 20),
                switch (state) {
                  AuthLoading() => const CircularProgressIndicator(),
                  _ => SizedBox(
                    width: double.infinity,
                    child: CustomButton(
                      key: const Key('login_button'),
                      onPressed: () async {
                        if (formKey.currentState!.validate()) {
                          await ref
                              .read(authControllerProvider.notifier)
                              .login(
                                email: emailController.text,
...
